# fugio-sfalic

./: CMakeLists.txt  README.md
SFALIC/: bigendian.c  bigendian.h  bppmask.h  cdf.c  cdfcmdline.c  cdfcmdline.h  cdfpred.c  cdfpred.h  cdfstat.c  cdfstat.h  cdftypes.h  ceillog2.c  ceillog2.h  cfamily.c  cfamily.h  clalloc.c  clalloc.h  decodecodeword.c  decodecodeword.h  encodecodeword.h  exitit.c  exitit.h  headers.c  headers.h  sfalic-04-readme.txt  statstruct.h  str.h  tabrand.c  tabrand.h  taskparams.c  taskparams.h
include/fugio/sfalic/: sfalic.h  uuid.h
source/: compressnode.cpp  compressnode.h  decompressnode.cpp  decompressnode.h  sfalicplugin.cpp  sfalicplugin.h
translations/: translations_de.ts
